--- a/anari-custom.scss
+++ b/anari-custom.scss
@@ -14,33 +14,35 @@ $headings-font-weight:  600 !default;
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css");
 @import url("https://cdn.jsdelivr.net/gh/moonspam/NanumSquare@1.0/nanumsquare.css");
 @import url("https://cdn.jsdelivr.net/gh/wan2land/d2coding/d2coding-ligature-subset.css");
+@import url("https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/variable/woff2/SUIT-Variable.css")
+@import url("https://cdn.jsdelivr.net/gh/sunn-us/SUITE/fonts/variable/woff2/SUITE-Variable.css")
 //@import url('http://fonts.cdnfonts.com/css/xits'); // Not working
 
 /*-- scss:rules --*/
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'NanumSquare' !important;
+  font-family: 'SUITE' !important;
   //text-shadow: -1px -1px 0 rgba(0, 0, 0, .3);
 }
 
 ul, li, ol{
-    font-family: 'pretendard' !important;
+    font-family: 'SUIT' !important;
     font-size: 95%;
    }
 
 p, fig-caption {
-    font-family: 'pretendard' !important;
+    font-family: 'SUIT' !important;
     font-size: 90%;
     font-weight: 400; 
 }
 
 table {
-  font-family: 'pretendard' !important;
+  font-family: 'SUIT' !important;
   font-size: 90%;
   font-weight: 400; 
 }
 
 .category{
-  font-family: 'pretendard' !important;
+  font-family: 'SUIT' !important;
   font-size: 90%;
 }
 
