--- a/anari-custom.scss
+++ b/anari-custom.scss
@@ -13,14 +13,16 @@ $headings-font-weight:  600 !default;
 /* @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap'); */
 // @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css");
 // @import url("https://cdn.jsdelivr.net/gh/moonspam/NanumSquare@1.0/nanumsquare.css");
+@import url("");
 @import url("https://cdn.jsdelivr.net/gh/wan2land/d2coding/d2coding-ligature-subset.css");
 @import url("https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/variable/woff2/SUIT-Variable.css");
 @import url("https://cdn.jsdelivr.net/gh/sunn-us/SUITE/fonts/variable/woff2/SUITE-Variable.css");
 //@import url('http://fonts.cdnfonts.com/css/xits'); // Not working
+//
 
 /*-- scss:rules --*/
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'SUITE' !important;
+  font-family: 'SUITE', sans-serif !important;
   //text-shadow: -1px -1px 0 rgba(0, 0, 0, .3);
 }
 
