--- a/anari-custom.scss
+++ b/anari-custom.scss
@@ -14,39 +14,41 @@ $headings-font-weight:  600 !default;
 // @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css");
 // @import url("https://cdn.jsdelivr.net/gh/moonspam/NanumSquare@1.0/nanumsquare.css");
 @import url("https://cdn.jsdelivr.net/gh/wan2land/d2coding/d2coding-ligature-subset.css");
-@import url("https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/variable/woff2/SUIT-Variable.css");
-@import url("https://cdn.jsdelivr.net/gh/sunn-us/SUITE/fonts/variable/woff2/SUITE-Variable.css");
+@import url("https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/variable/woff2/SUIT.css");
+@import url("https://cdn.jsdelivr.net/gh/sunn-us/SUITE/fonts/variable/woff2/SUITE.css");
 //@import url('http://fonts.cdnfonts.com/css/xits'); // Not working
 //
 
 /*-- scss:rules --*/
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'SUITE Variable', sans-serif !important;
-  font-weight: 700;
+  font-family: 'SUITE', sans-serif !important;
+  font-weight: 650;
   //text-shadow: -1px -1px 0 rgba(0, 0, 0, .3);
 }
 
 ul, li, ol{
-    font-family: 'SUIT Variable', sans-serif !important;
+    font-family: 'SUIT', sans-serif !important;
     font-size: 95%;
     font-weight: 400;
    }
 
 p, fig-caption {
-    font-family: 'SUIT Variable', sans-serif !important;
+    font-family: 'SUIT', sans-serif !important;
     font-size: 90%;
     font-weight: 400; 
 }
 
 table {
-  font-family: 'SUIT Variable', sans-serif !important;
+  font-family: 'SUIT', sans-serif !important;
   font-size: 90%;
   font-weight: 400; 
 }
 
 .category{
-  font-family: 'SUIT Variable', sans-serif !important;
+  font-family: 'SUIT', sans-serif !important;
   font-size: 90%;
+  font-weight: 400;
+  text-shadow: -1px -1px 0 rgba(0, 0, 0, .3);
 }
 
 .sourceCode {
