--- a/anari-custom.scss
+++ b/anari-custom.scss
@@ -27,13 +27,13 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 ul, li, ol{
-    font-family: 'SUIT Variable', sans-serif !important;
+    font-family: 'SUIT', sans-serif !important;
     font-size: 95%;
     font-weight: 400;
    }
 
 p, fig-caption {
-    font-family: 'SUIT Variable', sans-serif !important;
+    font-family: 'SUIT', sans-serif !important;
     font-size: 90%;
     font-weight: 400; 
 }
