--- a/anari-custom.scss
+++ b/anari-custom.scss
@@ -84,7 +84,9 @@ code {
     text-align: left; 
     background:#FFFFFF;
    }
-  
+
+// Obsolete but backward compatibility 
+
 .my-figure7 {
     display: inline-block; 
     margin: 0 auto;
