--- a/anari-custom.scss
+++ b/anari-custom.scss
@@ -85,6 +85,16 @@ code {
     background:#FFFFFF;
    }
 
+.figurec{
+    display: inline-block; 
+    margin: 0 auto;
+    border:0px silver solid; 
+    padding: 5px;
+    text-align: right; 
+    background:#FFFFFF;
+   }
+
+
 // Obsolete but backward compatibility 
 
 .my-figure7 {
