--- a/docs/site_libs/quarto-html/quarto-syntax-highlighting-dark.css
+++ b/docs/site_libs/quarto-html/quarto-syntax-highlighting-dark.css
@@ -1,35 +1,35 @@
 /* quarto syntax highlight colors */
 :root {
-  --quarto-hl-al-color: #bf0303;
-  --quarto-hl-an-color: #ca60ca;
-  --quarto-hl-at-color: #0057ae;
-  --quarto-hl-bn-color: #b08000;
-  --quarto-hl-bu-color: #644a9b;
-  --quarto-hl-ch-color: #924c9d;
-  --quarto-hl-co-color: #898887;
-  --quarto-hl-cv-color: #0095ff;
-  --quarto-hl-cn-color: #aa5500;
-  --quarto-hl-cf-color: #1f1c1b;
-  --quarto-hl-dt-color: #0057ae;
-  --quarto-hl-dv-color: #b08000;
-  --quarto-hl-do-color: #607880;
-  --quarto-hl-er-color: #bf0303;
-  --quarto-hl-ex-color: #0095ff;
-  --quarto-hl-fl-color: #b08000;
-  --quarto-hl-fu-color: #644a9b;
-  --quarto-hl-im-color: #ff5500;
-  --quarto-hl-in-color: #b08000;
-  --quarto-hl-kw-color: #1f1c1b;
-  --quarto-hl-op-color: #1f1c1b;
-  --quarto-hl-ot-color: #006e28;
-  --quarto-hl-pp-color: #006e28;
-  --quarto-hl-re-color: #0057ae;
-  --quarto-hl-sc-color: #3daee9;
-  --quarto-hl-ss-color: #ff5500;
-  --quarto-hl-st-color: #bf0303;
-  --quarto-hl-va-color: #0057ae;
-  --quarto-hl-vs-color: #bf0303;
-  --quarto-hl-wa-color: #bf0303;
+  --quarto-hl-al-color: #f07178;
+  --quarto-hl-an-color: #d4d0ab;
+  --quarto-hl-at-color: #00e0e0;
+  --quarto-hl-bn-color: #d4d0ab;
+  --quarto-hl-bu-color: #abe338;
+  --quarto-hl-ch-color: #abe338;
+  --quarto-hl-co-color: #f8f8f2;
+  --quarto-hl-cv-color: #ffd700;
+  --quarto-hl-cn-color: #ffd700;
+  --quarto-hl-cf-color: #ffa07a;
+  --quarto-hl-dt-color: #ffa07a;
+  --quarto-hl-dv-color: #d4d0ab;
+  --quarto-hl-do-color: #f8f8f2;
+  --quarto-hl-er-color: #f07178;
+  --quarto-hl-ex-color: #00e0e0;
+  --quarto-hl-fl-color: #d4d0ab;
+  --quarto-hl-fu-color: #ffa07a;
+  --quarto-hl-im-color: #abe338;
+  --quarto-hl-in-color: #d4d0ab;
+  --quarto-hl-kw-color: #ffa07a;
+  --quarto-hl-op-color: #ffa07a;
+  --quarto-hl-ot-color: #00e0e0;
+  --quarto-hl-pp-color: #dcc6e0;
+  --quarto-hl-re-color: #00e0e0;
+  --quarto-hl-sc-color: #abe338;
+  --quarto-hl-ss-color: #abe338;
+  --quarto-hl-st-color: #abe338;
+  --quarto-hl-va-color: #00e0e0;
+  --quarto-hl-vs-color: #abe338;
+  --quarto-hl-wa-color: #dcc6e0;
 }
 
 /* other quarto variables */
@@ -38,182 +38,148 @@
 }
 
 code span.al {
-  color: #bf0303;
-  background-color: #f7e6e6;
+  background-color: #2a0f15;
   font-weight: bold;
-  font-style: inherit;
+  color: #f07178;
 }
 
 code span.an {
-  color: #ca60ca;
-  font-style: inherit;
+  color: #d4d0ab;
 }
 
 code span.at {
-  color: #0057ae;
-  font-style: inherit;
+  color: #00e0e0;
 }
 
 code span.bn {
-  color: #b08000;
-  font-style: inherit;
+  color: #d4d0ab;
 }
 
 code span.bu {
-  color: #644a9b;
-  font-weight: bold;
-  font-style: inherit;
+  color: #abe338;
 }
 
 code span.ch {
-  color: #924c9d;
-  font-style: inherit;
+  color: #abe338;
 }
 
 code span.co {
-  color: #898887;
-  font-style: inherit;
+  font-style: italic;
+  color: #f8f8f2;
 }
 
 code span.cv {
-  color: #0095ff;
-  font-style: inherit;
+  color: #ffd700;
 }
 
 code span.cn {
-  color: #aa5500;
-  font-style: inherit;
+  color: #ffd700;
 }
 
 code span.cf {
-  color: #1f1c1b;
   font-weight: bold;
-  font-style: inherit;
+  color: #ffa07a;
 }
 
 code span.dt {
-  color: #0057ae;
-  font-style: inherit;
+  color: #ffa07a;
 }
 
 code span.dv {
-  color: #b08000;
-  font-style: inherit;
+  color: #d4d0ab;
 }
 
 code span.do {
-  color: #607880;
-  font-style: inherit;
+  color: #f8f8f2;
 }
 
 code span.er {
-  color: #bf0303;
-  font-style: inherit;
+  color: #f07178;
   text-decoration: underline;
 }
 
 code span.ex {
-  color: #0095ff;
   font-weight: bold;
-  font-style: inherit;
+  color: #00e0e0;
 }
 
 code span.fl {
-  color: #b08000;
-  font-style: inherit;
+  color: #d4d0ab;
 }
 
 code span.fu {
-  color: #644a9b;
-  font-style: inherit;
+  color: #ffa07a;
 }
 
 code span.im {
-  color: #ff5500;
-  font-style: inherit;
+  color: #abe338;
 }
 
 code span.in {
-  color: #b08000;
-  font-style: inherit;
+  color: #d4d0ab;
 }
 
 code span.kw {
-  color: #1f1c1b;
   font-weight: bold;
-  font-style: inherit;
+  color: #ffa07a;
 }
 
 pre > code.sourceCode > span {
-  color: #1f1c1b;
-  font-style: inherit;
+  color: #f8f8f2;
 }
 
 code span {
-  color: #1f1c1b;
-  font-style: inherit;
+  color: #f8f8f2;
 }
 
 code.sourceCode > span {
-  color: #1f1c1b;
-  font-style: inherit;
+  color: #f8f8f2;
 }
 
 div.sourceCode,
 div.sourceCode pre.sourceCode {
-  color: #1f1c1b;
-  font-style: inherit;
+  color: #f8f8f2;
 }
 
 code span.op {
-  color: #1f1c1b;
-  font-style: inherit;
+  color: #ffa07a;
 }
 
 code span.ot {
-  color: #006e28;
-  font-style: inherit;
+  color: #00e0e0;
 }
 
 code span.pp {
-  color: #006e28;
-  font-style: inherit;
+  color: #dcc6e0;
 }
 
 code span.re {
-  color: #0057ae;
-  background-color: #e0e9f8;
-  font-style: inherit;
+  background-color: #f8f8f2;
+  color: #00e0e0;
 }
 
 code span.sc {
-  color: #3daee9;
-  font-style: inherit;
+  color: #abe338;
 }
 
 code span.ss {
-  color: #ff5500;
-  font-style: inherit;
+  color: #abe338;
 }
 
 code span.st {
-  color: #bf0303;
-  font-style: inherit;
+  color: #abe338;
 }
 
 code span.va {
-  color: #0057ae;
-  font-style: inherit;
+  color: #00e0e0;
 }
 
 code span.vs {
-  color: #bf0303;
-  font-style: inherit;
+  color: #abe338;
 }
 
 code span.wa {
-  color: #bf0303;
-  font-style: inherit;
+  color: #dcc6e0;
 }
 
 .prevent-inlining {
