--- a/anari-custom.scss
+++ b/anari-custom.scss
@@ -10,6 +10,9 @@ $headings-font-weight:  600 !default;
 
 // $body-color: black !default;
 
+//@import url("https://webfontworld.github.io/sunn/SUIT.css");
+//@import url("https://webfontworld.github.io/sunn/SUITE.css");
+
 @import url("https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/static/woff2/SUIT.css");
 @import url("https://cdn.jsdelivr.net/gh/sunn-us/SUITE/fonts/static/woff2/SUITE.css");
 @import url("https://cdn.jsdelivr.net/gh/wan2land/d2coding/d2coding-ligature-subset.css");
