--- a/anari-custom.scss
+++ b/anari-custom.scss
@@ -6,7 +6,7 @@ $h4-font-size: 100%  !default;
 $h5-font-size: 100%  !default;
 $g6-font-size: 100%  !default;
 //$figure-caption-font-size: 70% !default;
-$headings-font-weight:  400% !default;
+$headings-font-weight:  600 !default;
 
 //@import url("https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/static/woff2/SUIT.css");
 //@import url("https://cdn.jsdelivr.net/gh/sunn-us/SUITE/fonts/static/woff2/SUITE.css");
