--- a/_quarto_internal_scss_error.scss
+++ b/_quarto_internal_scss_error.scss
@@ -1,6 +1,8 @@
-// quarto-scss-analysis-annotation { "quarto-version": "1.6.32" }
+// quarto-scss-analysis-annotation { "quarto-version": "1.6.40" }
 
 // quarto-scss-analysis-annotation { "origin": "'use' section from format" }
+
+
 
 
 
@@ -24,6 +26,8 @@
 
 
 
+
+
 @use "sass:map" as listing-map;
 
 
@@ -40,19 +44,9 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
 // quarto-scss-analysis-annotation { "origin": "'functions' section from format" }
+
+
 
 
 
@@ -494,6 +488,8 @@ $_luminance-list: .0008 .001 .0011 .0013 .0015 .0017 .002 .0022 .0025 .0027 .003
 
 
 // quarto-scss-analysis-annotation { "origin": "'functions' section from Quarto" }
+
+
 
 // Our website navbar implementation will shift the body down
 // to accomodate the navbar, but the height is variable. As a result
@@ -1041,18 +1037,6 @@ $theme-name: null !default;
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
 // quarto-scss-analysis-annotation { "origin": "Defaults from user-defined SCSS" }
 
 $h1-font-size: 155%  !default;
@@ -1259,18 +1243,6 @@ $title-banner-image: null !default;
 $btn-code-copy-color: #6a737d !default;
 $btn-code-copy-color-active: #b392f0 !default;
 
-
-
-
-
-
-
-
-
-
-
-
-
 // quarto-scss-analysis-annotation { "origin": "Defaults from Quarto's SCSS" }
 
 $code-copy-selector: "pre.sourceCode:hover > " !default;
@@ -1298,6 +1270,7 @@ $link-color: if(
   theme-override-value($theme-name, "link-color", $link-color),
   $link-color
 );
+$link-color-bg: transparent !default;
 
 /* Code Block Formatting */
 // Code Block Border Treatment
@@ -1514,13 +1487,15 @@ $code-annotation-higlight-bg: #aaaaaa22 !default;
 $breadcrumb-divider: quote(">") !default;
 
 // table variable overrides
-$table-group-separator-color: lighten(
+$table-group-separator-color: mix(
   if(variable-exists(body-color), $body-color, $gray-900),
+  $body-contrast-bg,
   50%
 ) !default;
-$table-group-separator-color-lighter: lighten(
+$table-group-separator-color-lighter: mix(
   if(variable-exists(body-color), $body-color, $gray-900),
-  70%
+  $body-contrast-bg,
+  20%
 ) !default;
 
 $bootstrap-version: 5;
@@ -1536,7 +1511,8 @@ $h1h2h3-font-weight: 600 !default;
 $font-weight-base: 400 !default;
 $small-font-size: 0.875em !default;
 $code-font-size: $small-font-size !default;
-$font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
+$font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas,
+  "Liberation Mono", "Courier New", monospace !default;
 
 $font-family-monospace-block: $font-family-monospace !default;
 $font-family-monospace-inline: $font-family-monospace !default;
@@ -1545,6 +1521,16 @@ $font-weight-monospace-block: $font-weight-monospace !default;
 $font-weight-monospace-inline: $font-weight-monospace !default;
 $code-block-font-size: $code-font-size !default;
 $code-inline-font-size: $code-font-size !default;
+$link-weight: $font-weight-base !default;
+$link-decoration: null !default;
+
+// border colors
+$border-color: mix(
+  if(variable-exists(body-color), $body-color, #fff),
+  $body-contrast-bg,
+  30%
+) !default;
+$table-border-color: $border-color !default;
 
 // code block colors
 $btn-code-copy-color: if(
@@ -1587,6 +1573,8 @@ $navbar-title-order: if($navbar-toggle-position == "left", 2, 1) !default;
 $navbar-search-order: if($navbar-toggle-position == "left", 4, 3) !default;
 $navbar-tools-order: if($navbar-toggle-position == "left", 3, 2) !default;
 $navbar-menu-order: if($navbar-toggle-position == "left", 20, 20) !default;
+
+
 
 
 // quarto-scss-analysis-annotation { "origin": "Defaults from the format SCSS" }
@@ -3381,7 +3369,11 @@ $pre-line-height:                   $line-height-base !default;
 
 
 
+
+
 // quarto-scss-analysis-annotation { "origin": "'mixins' section from format" }
+
+
 
 
 
@@ -3477,6 +3469,8 @@ $pre-line-height:                   $line-height-base !default;
 
 
 // quarto-scss-analysis-annotation { "origin": "'mixins' section from Quarto" }
+
+
 
 
 
@@ -5317,19 +5311,9 @@ $grid-default-toc-mid-body: minmax(
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
 // quarto-scss-analysis-annotation { "origin": "'rules' section from format" }
+
+
 
 
 
@@ -6492,6 +6476,8 @@ $bslib-sidebar-padding: $spacer * 1.5 !default;
 
 
 // quarto-scss-analysis-annotation { "origin": "'rules' section from Quarto" }
+
+
 
 
 .quarto-container {
@@ -10088,6 +10074,12 @@ a {
   text-underline-offset: 3px;
 }
 
+/* Callout styling */
+
+.callout pre.sourceCode {
+  padding-left: 0;
+}
+
 // ansi escaping
 div.ansi-escaped-output {
   font-family: monospace;
@@ -10242,7 +10234,6 @@ div.ansi-escaped-output {
   }
 }
 
-
 /* rules to support GT table styling */
 table.gt_table {
   color: var(--quarto-body-color);
@@ -10351,6 +10342,7 @@ $body-bg: #fff !default;
 $primary: #468 !default;
 $secondary: #999 !default;
 $font-family-sans-serif: sans-serif !default;
+$font-weight-base: 400 !default;
 
 /* SCSS variables
 
@@ -10365,6 +10357,7 @@ $mermaid-fg-color: $body-color !default;
 $mermaid-fg-color--lighter: lighten($body-color, 10%) !default;
 $mermaid-fg-color--lightest: lighten($body-color, 20%) !default;
 $mermaid-font-family: $font-family-sans-serif !default;
+$mermaid-font-weight: $font-weight-base !default;
 $mermaid-label-bg-color: $body-bg !default;
 $mermaid-label-fg-color: $primary !default;
 $mermaid-node-bg-color: rgba($primary, 0.1) !default;
@@ -11343,11 +11336,6 @@ pre.sourceCode > code.sourceCode {
   @if not $code-block-bg {
     padding: 0;
   }
-}
-
-// no border inside callouts
-.callout pre.sourceCode {
-  padding-left: 0;
 }
 
 div.sourceCode {
@@ -12635,6 +12623,13 @@ code {
   font-weight: $font-weight-monospace-inline;
 }
 
+// link styling
+a {
+  background-color: $link-color-bg;
+  font-weight: $link-weight;
+  text-decoration: $link-decoration;
+}
+
 
   $font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
   /*! quarto-variables-start */
@@ -12708,18 +12703,6 @@ a.external:after:hover {
 
 
 // quarto-scss-analysis-annotation { "origin": "'rules' section from user-defined SCSS" }
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 /* Title Banner */
